Update INSTALL.md doc

--- a/production.template.ini
+++ b/production.template.ini
@@ -28,7 +28,7 @@ port = 80
 
 [handler_filelog]
 class = handlers.RotatingFileHandler
-args = ('%(here)s/log/vkviewer.log','a')
+args = ('%(here)s/log/georeference.log','a')
 level = INFO
 formatter = generic
 
